<resources>
    <string name="app_name">Store organizer</string>
    <string name="package_name">fr.goui.storeorganizer</string>

    <string name="click_to_continue">Click\nto continue</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="overall">Overall</string>
    <string name="go_to_details">Go to details</string>
    <string name="go_to_overall">Go to overall</string>
    <string name="color">Color</string>
    <string name="save">Save</string>
    <string name="appointment_creation">Appointment creation</string>
    <string name="appointment_edition">Appointment edition</string>
    <string name="worker">Worker</string>
    <string name="task">Task</string>
    <string name="task_name">Task name</string>
    <string name="task_duration">Task duration</string>
    <string name="workers">Workers</string>
    <string name="tasks">Tasks</string>
    <string name="automatic">Automatic</string>
    <string name="name">Name</string>
    <string name="duration">Duration</string>
    <string name="duration_in_minutes">Duration in minutes</string>
    <string name="add_worker">Add worker</string>
    <string name="add_task">Add task</string>
    <string name="add_appointment">Add appointment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="worker_removed">Worker removed</string>
    <string name="question_remove">Remove?</string>
    <string name="question_remove_this_appointment">Remove this appointment?</string>
    <string name="gap">gap</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clients_name">Client\'s name</string>
    <string name="clients_phone_number">Client\'s phone number</string>
    <string name="no_appointments_scheduled">No appointments scheduled.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="at">at</string>
    <string name="now">Now</string>
    <string name="working_times">Working times</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="during">during</string>
    <string name="ended">Ended</string>
    <string name="next_availability">Next availability</string>
    <string name="no_phone_entered">No phone entered</string>
    <string name="restore_default">Restore default</string>
    <string name="restore_workers">Restore workers</string>
    <string name="restore_tasks">Restore tasks</string>
    <string name="question_restore_default">Restore default?</string>
    <string name="question_restore_workers">Restore workers?</string>
    <string name="question_restore_tasks">Restore tasks?</string>
    <string name="cant_remove_last">You cannot remove the last one</string>
    <string name="please_specify_a_name">Please specify a name</string>
    <string name="please_specify_a_duration">Please specify a duration</string>
    <string name="appointment_cannot_be_in_the_past">Appointment cannot be in the past</string>
    <string name="ending_time_cannot_be_prior_to_starting_time">Ending time cannot be prior to starting time</string>
    <string name="appointment_overlapping">Appointment overlapping</string>
    <string name="modification_will_appear_for_later_tasks">Modification will appear for later tasks</string>
    <string name="scrolling_to_the_current_appointment">Scrolling to the current appointment</string>
    <string name="starting_time_cannot_be_before">Starting time cannot be before</string>
    <string name="ending_time_cannot_be_after">Ending time cannot be after</string>

    <!-- For the intents -->
    <string name="intent_appointment_creation_worker_position">intent_appointment_creation_worker_position</string>
    <string name="intent_appointment_creation_result_worker_position">intent_appointment_creation_result_worker_position</string>
    <string name="intent_appointment_edition_result_old_worker_position">intent_appointment_edition_result_old_worker_position</string>
    <string name="intent_appointment_edition_result_old_appointment_position">intent_appointment_edition_result_old_appointment_position</string>
    <string name="intent_appointment_edition_result_new_worker_position">intent_appointment_edition_result_new_worker_position</string>

    <!-- For the shared preferences  -->
    <string name="preference_file_key">fr.goui.storeorganizer.PREFERENCE_FILE_KEY</string>
    <string name="worker_max_id">worker_max_id</string>
    <string name="task_max_id">task_max_id</string>
    <string name="starting_hour">starting_hour</string>
    <string name="starting_minute">starting_minute</string>
    <string name="ending_hour">ending_hour</string>
    <string name="ending_minute">ending_minute</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
