<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.goui.storeorganizer.DetailsActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_next_availability"
        android:orderInCategory="25"
        android:title="@string/next_availability"
        android:icon="@drawable/ic_action_next_availability"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_go_to_overall"
        android:orderInCategory="50"
        android:title="@string/go_to_overall"
        android:icon="@drawable/ic_action_go_to_overall"
        app:showAsAction="ifRoom" />

</menu>
