<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/activity_appointment_creation_clients_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/clients_name"
                android:inputType="textPersonName|textCapSentences"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/activity_appointment_creation_clients_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/clients_phone_number"
                android:inputType="phone"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/activity_appointment_creation_worker_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/worker"/>

        <Spinner
            android:id="@+id/activity_appointment_creation_worker_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/activity_appointment_creation_task_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/task"/>

        <Spinner
            android:id="@+id/activity_appointment_creation_task_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_appointment_creation_from_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/from"/>

            <CheckBox
                android:id="@+id/activity_appointment_creation_from_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/automatic"/>

        </LinearLayout>

        <TextView
            android:id="@+id/activity_appointment_creation_start_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/light_grey"
            android:clickable="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/grey_overlay"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/light_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_appointment_creation_to_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/to"/>

            <CheckBox
                android:id="@+id/activity_appointment_creation_to_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/automatic"/>

        </LinearLayout>

        <TextView
            android:id="@+id/activity_appointment_creation_end_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/light_grey"
            android:clickable="true"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/grey_overlay"
            android:textSize="18sp"/>

    </LinearLayout>

</ScrollView>