<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:clickable="true">

    <ImageView
        android:id="@+id/layout_appointment_information_task_name_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/task_name"
        android:src="@drawable/ic_task_black"/>

    <TextView
        android:id="@+id/layout_appointment_information_task_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/layout_appointment_information_task_name_image_view"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/layout_appointment_information_task_name_image_view"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/layout_appointment_information_clients_name_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_appointment_information_task_name_image_view"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/clients_name"
        android:src="@drawable/ic_person_black"/>

    <TextView
        android:id="@+id/layout_appointment_information_clients_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/layout_appointment_information_clients_name_image_view"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/layout_appointment_information_clients_name_image_view"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/layout_appointment_information_clients_phone_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_appointment_information_clients_name_image_view"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/clients_phone_number"
        android:src="@drawable/ic_phone_black"/>

    <TextView
        android:id="@+id/layout_appointment_information_clients_phone_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/layout_appointment_information_clients_phone_image_view"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/layout_appointment_information_clients_phone_image_view"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textSize="16sp"/>

</RelativeLayout>